--- a/sample-applications/package.json
+++ b/sample-applications/package.json
@@ -43,6 +43,6 @@
     "eslint-config-airbnb-base": "12.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-mocha": "4.11.0",
-    "mocha": "5.0.1"
+    "mocha": "^8.1.3"
   }
 }
